--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,16 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Categories</h1>
+  <h1>Categories</h1>
 
-<table>
-  <thead>
+  <table>
+    <thead>
     <tr>
       <th>Name</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.name %></td>
@@ -19,9 +20,10 @@
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Category', new_category_path %>
+  <%= link_to 'New Category', new_category_path %>
+</div>
