--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -2,6 +2,8 @@
   <p class="navbar-text float-right">
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to "Categories", categories_path, :class => 'navbar-link'  %> |
+      <%= link_to "Products", products_path, :class => 'navbar-link'  %> |
       <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     <% else %>
