--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <%= form_with(model: product, local: true) do |form| %>
+    <input type="hidden" id="user_id" name="product[user_id]" value="<%= current_user.id %>"/>
     <% if product.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -26,7 +27,6 @@
       <%= form.label :stock %>
       <%= form.number_field :stock %>
     </div>
-
     <div class="actions">
       <%= form.submit %>
     </div>
