--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,16 @@
     </div>
 
     <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :telephone %>
+      <%= f.telephone_field :telephone, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :password %>
       <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
 
