--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,31 @@
-<h1>New Review</h1>
+<div class="container">
+  <h1>New Review</h1>
 
-<%= render 'form', review: @review %>
+  <%= form_with(model: @review, local: true) do |form| %>
+    <% if @review.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
-<%= link_to 'Back', reviews_path %>
+        <ul>
+          <% @review.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :body %>
+      <%= form.text_area :body %>
+    </div>
+    <%= form.hidden_field :user_id, :value => current_user.id %>
+    <%= form.hidden_field :product_id, :value => params[:format] %>
+    <div class="actions">
+      <%= form.submit %>
+    </div>
+  <% end %>
+
+
+
+  <%= link_to 'Back', reviews_path %>
+</div>
