--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,8 @@
     <%= @product.stock %>
   </p>
 
+  <%= link_to 'Show Old Reviews', reviews_path(@product) %> |
+  <%= link_to 'New Review', new_review_path(@product) %> |
   <%= link_to 'Edit', edit_product_path(@product) %> |
   <%= link_to 'Back', products_path %>
 </div>
