--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,31 +1,31 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Reviews</h1>
+  <h1>Reviews</h1>
 
-<table>
-  <thead>
+  <table>
+    <thead>
     <tr>
-      <th>Body</th>
+      <th>Review</th>
       <th>User</th>
-      <th>Product</th>
+<!--      <th>Product</th>-->
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @reviews.each do |review| %>
       <tr>
         <td><%= review.body %></td>
-        <td><%= review.user %></td>
-        <td><%= review.product %></td>
-        <td><%= link_to 'Show', review %></td>
-        <td><%= link_to 'Edit', edit_review_path(review) %></td>
-        <td><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= review.user.name %></td>
+<!--        <td><%#= review.product %></td>-->
+<!--        <td><%#= link_to 'Show', review %></td>-->
+<!--        <td><%#= link_to 'Edit', edit_review_path(review) %></td>-->
+<!--        <td><%#= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
-
-<%= link_to 'New Review', new_review_path %>
+  <br>
+</div>
