--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -5,16 +5,5 @@
     <%= @review.body %>
   </p>
 
-  <p>
-    <strong>User:</strong>
-    <%= @review.user %>
-  </p>
-
-  <p>
-    <strong>Product:</strong>
-    <%= @review.product %>
-  </p>
-
-  <%= link_to 'Edit', edit_review_path(@review) %> |
-  <%= link_to 'Back', reviews_path %>
+  <%= link_to 'Back', products_path %>
 </div>
