--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -34,6 +34,13 @@
           </li>
         <% end %>
       </ul>
+      <%= form_tag(search_page_path, :method => "get",
+                   class: 'form-inline my-2 my-lg-0') do %>
+        <div class="input-group">
+          <%= search_field_tag :search, params[:search], placeholder: "Search", class: "form-control mr-sm-2" %>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </div>
+      <% end %>
     </div>
   </div>
 </nav>
