Done with Orders

--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -51,7 +51,7 @@
     <div class="intro-text">
       <div class="intro-lead-in">Welcome To Our Online Market</div>
       <div class="intro-heading text-uppercase">Shut up & Take My Money</div>
-      <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#portfolio">Tell Me More</a>
+      <%= link_to 'Place An Order', new_order_path, :class => "btn btn-primary btn-xl text-uppercase js-scroll-trigger" %>
     </div>
   </div>
 </header>
