--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,9 +1,10 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Orders</h1>
+  <h1>Orders</h1>
 
-<table>
-  <thead>
+  <table>
+    <thead>
     <tr>
       <th>Shipping date</th>
       <th>Shipping address</th>
@@ -11,23 +12,22 @@
       <th>User</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.shipping_date %></td>
         <td><%= order.shipping_address %></td>
-        <td><%= order.order %></td>
-        <td><%= order.user %></td>
+        <td><%= order.user.name %></td>
         <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Order', new_order_path %>
+  <%= link_to 'New Order', new_order_path %>
+
+</div>
