--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <p>
-    <strong>Body:</strong>
+    <strong>Review:</strong>
     <%= @review.body %>
   </p>
 
