--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,8 @@
     </tr>
     </thead>
 
-    <tbody>
+    <tbody>.
+    
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
