--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,6 +32,9 @@
     </div>
   <% end %>
 
+  <% if user_signed_in? %>
+    <%= button_to 'Add to cart', cart_items_path(product_id: @product), class:'btn btn-outline-danger my-2 my-sm-0' %>
+  <% end %>
   <%= link_to 'Show Old Reviews', reviews_path(@product) %> |
   <%= link_to 'New Review', new_review_path(@product) %> |
   <%= link_to 'Edit', edit_product_path(@product) %> |
