--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -27,6 +27,9 @@
           <% end %>
 
           <li class="nav-item">
+            <%= link_to "Advanced Search", custom_search_query_path, :class => 'nav-link js-scroll-trigger'  %>
+          </li>
+          <li class="nav-item">
             <%= link_to "Categories", categories_path, :class => 'nav-link js-scroll-trigger'  %>
           </li>
           <li class="nav-item">
