--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,16 +12,17 @@
     </tr>
     </thead>
 
-    <tbody>.
+    <tbody>
     
     <% @products.each do |product| %>
       <tr>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
-        <td><%= link_to 'Show', product %></td> |
-        <td><%= link_to 'Edit', edit_product_path(product) %></td> |
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td> |
+        <% if product.user_id == current_user.id %>
+          <td><%= link_to 'Edit', edit_product_path(product) %></td>
+          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
     </tbody>
